chapter cache, chapter viewer, new themes, library revamp, responsive layout, new options

--- a/plugin/_locales/ru/messages.json
+++ b/plugin/_locales/ru/messages.json
@@ -55,6 +55,18 @@
 		"message": "Упаковать EPUB",
 		"description": "Label on button to create the EPUB"
 	},
+	"__MSG_button_Download_Chapters__": {
+		"message": "Скачать главы",
+		"description": "Label on button to download chapters without packing into EPUB"
+	},
+	"__MSG_button_Add_to_Library__": {
+		"message": "Добавить в библиотеку",
+		"description": "Label on button to create the EPUB and Add it to the Library"
+	},
+	"__MSG_button_Update_Library_Book__": {
+		"message": "Обновить книгу библиотеки",
+		"description": "Label on button to add chapters to the currently selected library book"
+	},
 	"__MSG_button_Reset__": {
 		"message": "Сброс",
 		"description": "Label on button that clears the dialog"
@@ -171,8 +183,12 @@
 		"message": "Имя файла:",
 		"description": "Label in front input for file to save EPUB as"
 	},
+	"__MSG_label_Default_Author_Name__": {
+		"message": "Имя автора по умолчанию",
+		"description": "Fallback author name when none is found"
+	},
 	"__MSG_label_Developer_Stuff__": {
-		"message": "Инструменты разработчика:",
+		"message": "Инструменты разработчика",
 		"description": "Label for checkbox to show/hide buttons for developer testing (in Advanced settings)."
 	},
 	"__MSG_label_Fetch_Highest_Resolution_Images__": {
@@ -304,7 +320,7 @@
 		"description": "Message shown while looking for list of Chapter URLs."
 	},
 	"__MSG_Shift_Click__": {
-		"message": "Вы можете выделить несколько глав следующим образом: отметьте первую желаемую главу, зажмите клавишу Shift и отметьте последнюю желаемую главу.",
+		"message": "Вы можете выделить несколько глав следующим образом: отметьте первую желаемую главу, зажмите клавишу Shift и отметьте последнюю желаемую главу.\n\nЭто уведомление можно отключить в Расширенных настройках.",
 		"description": "Tell user how to shift-click to multiselect."
 	},
 	"convertToXhtmlWarning": {
@@ -467,5 +483,169 @@
 			    "content": "$1"
 			}
 		}
+	},
+	"__MSG_button_Lib_Library__": {
+		"message": "Библиотека",
+		"description": "Label on button to toggle show 'Library'"
+	},
+	"__MSG_label_Lib_Show_Advanced_Library_Options__": {
+		"message": "Показать расширенные параметры библиотеки",
+		"description": "Label for checkbox to Show Advanced Library Options"
+	},
+	"__MSG_label_Lib_Compact_View__": {
+		"message": "Компактный вид библиотеки",
+		"description": "Label for checkbox to enable compact library view"
+	},
+	"__MSG_label_Lib_Download_Epub_After_Update__": {
+		"message": "Автоматически скачивать EPUB после добавления новых глав",
+		"description": "Label for checkbox to Download Epubs after update"
+	},
+	"__MSG_label_Lib_Warning_In_Progress___": {
+		"message": "В процессе....",
+		"description": "Label for Library loading in local storage in progress"
+	},
+	"__MSG_button_Lib_Template_Clear_Library__": {
+		"message": "Очистить библиотеку",
+		"description": "Label on button to clear Local Storage"
+	},
+	"__MSG_confirm_Clear_Library__": {
+		"message": "Вы уверены, что хотите очистить всю библиотеку? Это удалит все сохранённые книги и не может быть отменено.",
+		"description": "Confirmation dialog when clearing the entire library"
+	},
+	"__MSG_confirm_delete_library_book__": {
+		"message": "Вы уверены, что хотите удалить эту книгу из библиотеки? Это действие нельзя отменить.",
+		"description": "Confirmation dialog when deleting a single library book"
+	},
+	"__MSG_button_Lib_Template_Export_Library__": {
+		"message": "Экспорт библиотеки",
+		"description": "Label on button to export Library in json format"
+	},
+	"__MSG_button_Lib_Template_Import_Library__": {
+		"message": "Импорт библиотеки",
+		"description": "Label on button to import Library in json format"
+	},
+	"__MSG_button_Lib_Template_Upload_Epub__": {
+		"message": "Загрузить EPUB",
+		"description": "Label on button to Upload Epub in Library"
+	},
+	"__MSG_button_Lib_Template_Add_List_To_Library__": {
+		"message": "Добавить романы в библиотеку",
+		"description": "Label on button to Add novels to Library in Library"
+	},
+	"__MSG_button_Lib_Template_Update_All__": {
+		"message": "Обновить все",
+		"description": "Label on button to Update all Epubs"
+	},
+	"__MSG_button_Lib_Template_Delete_EPUB__": {
+		"message": "Удалить книгу из библиотеки",
+		"description": "Label on button to Delete Library Book"
+	},
+	"__MSG_button_Lib_Template_Search_new_Chapters__": {
+		"message": "Поиск новых глав",
+		"description": "Label on button to Search new Chapters"
+	},
+	"__MSG_button_Lib_Template_Update_new_Chapters__": {
+		"message": "Обновить",
+		"description": "Label on button to Update new Chapters"
+	},
+	"__MSG_button_Lib_Template_Download_EPUB__": {
+		"message": "Скачать EPUB",
+		"description": "Label on button to Download EPUB from Library"
+	},
+	"__MSG_button_Cache_Options__": {
+		"message": "Параметры кэша",
+		"description": "Label on button to open cache options"
+	},
+	"__MSG_label_Enable_Chapter_Caching__": {
+		"message": "Включить постоянное кэширование глав",
+		"description": "Label for checkbox to enable/disable persistent chapter caching"
+	},
+	"__MSG_label_Cache_Retention_Days__": {
+		"message": "Дни хранения кэша",
+		"description": "Label for input field for cache retention period in days"
+	},
+	"__MSG_label_Cached_Chapter_Count__": {
+		"message": "Количество кэшированных глав",
+		"description": "Label for displaying number of cached chapters"
+	},
+	"__MSG_label_Chapter_Cache_Size__": {
+		"message": "Размер кэша глав",
+		"description": "Label for displaying cache size"
+	},
+	"__MSG_button_Delete_All_Cached_Chapters__": {
+		"message": "Удалить все кэшированные главы",
+		"description": "Label on button to delete all cached chapters"
+	},
+	"__MSG_tooltip_View_Cached_Chapter__": {
+		"message": "Просмотр кэшированной главы",
+		"description": "Tooltip for view cached chapter button"
+	},
+	"__MSG_tooltip_Delete_Cached_Chapter__": {
+		"message": "Удалить кэшированную главу",
+		"description": "Tooltip for delete cached chapter button"
+	},
+	"__MSG_tooltip_Download_Chapter__": {
+		"message": "Скачать главу",
+		"description": "Tooltip text for the download chapter icon"
+	},
+	"__MSG_tooltip_Chapter_Selection__": {
+		"message": "Выбранные главы будут включены в действия: Создать EPUB, Скачать главы или Добавить в библиотеку",
+		"description": "Tooltip text explaining what selected chapters are used for"
+	},
+	"__MSG_tooltip_Refresh_Chapter__": {
+		"message": "Обновить главу",
+		"description": "Tooltip for refresh chapter menu option"
+	},
+	"__MSG_tooltip_Delete_Chapter__": {
+		"message": "Удалить главу",
+		"description": "Tooltip for delete chapter menu option"
+	},
+	"__MSG_menu_Open_Chapter_URL__": {
+		"message": "Открыть ссылку на главу",
+		"description": "Menu option to open the chapter URL in a new tab"
+	},
+	"__MSG_menu_Open_Story_URL__": {
+		"message": "Открыть ссылку на историю",
+		"description": "Menu option to open the main story URL in a new tab"
+	},
+	"__MSG_menu_Download_Chapter__": {
+		"message": "Скачать HTML файл",
+		"description": "Menu option to download a single chapter as HTML file"
+	},
+	"__MSG_menu_Reorder_Chapters__": {
+		"message": "Переупорядочить главы",
+		"description": "Menu option to reorder chapters in a library book"
+	},
+	"__MSG_menu_Hide_Library_Chapters__": {
+		"message": "Скрыть главы из библиотеки",
+		"description": "Menu option to hide chapters that are already in the library book"
+	},
+	"__MSG_menu_Show_Library_Chapters__": {
+		"message": "Показать главы из библиотеки",
+		"description": "Menu option to show chapters that are already in the library book"
+	},
+	"__MSG_menu_Export_Story_Details_JSON__": {
+		"message": "Экспорт деталей истории в JSON",
+		"description": "Menu option to export story metadata and details as JSON file"
+	},
+	"__MSG_modal_title_Reorder_Chapters__": {
+		"message": "Переупорядочить главы",
+		"description": "Title for the chapter reordering modal"
+	},
+	"__MSG_label_Reorder_Instructions__": {
+		"message": "Используйте кнопки со стрелками для изменения порядка глав. Изменения будут сохранены в вашей библиотеке.",
+		"description": "Instructions text in the chapter reordering modal"
+	},
+	"__MSG_button_Save_Order__": {
+		"message": "Сохранить порядок",
+		"description": "Button to save the new chapter order"
+	},
+	"__MSG_tooltip_More_Actions__": {
+		"message": "Дополнительные действия",
+		"description": "Tooltip for more actions menu button"
+	},
+	"__MSG_label_library_no_books__": {
+		"message": "В вашей библиотеке нет книг.",
+		"description": "Message shown when the library is empty"
 	}
 }
