--- a/plugin/_locales/uk/messages.json
+++ b/plugin/_locales/uk/messages.json
@@ -55,6 +55,18 @@
 		"message": "Упаковати EPUB",
 		"description": "Label on button to create the EPUB"
 	},
+	"__MSG_button_Download_Chapters__": {
+		"message": "Завантажити розділи",
+		"description": "Label on button to download chapters without packing into EPUB"
+	},
+	"__MSG_button_Add_to_Library__": {
+		"message": "Додати до бібліотеки",
+		"description": "Label on button to create the EPUB and Add it to the Library"
+	},
+	"__MSG_button_Update_Library_Book__": {
+		"message": "Оновити книгу бібліотеки",
+		"description": "Label on button to add chapters to the currently selected library book"
+	},
 	"__MSG_button_Reset__": {
 		"message": "Очистити",
 		"description": "Label on button that clears the dialog"
@@ -171,8 +183,12 @@
 		"message": "Ім’я файлу:",
 		"description": "Label in front input for file to save EPUB as"
 	},
+	"__MSG_label_Default_Author_Name__": {
+		"message": "Ім'я автора за замовчуванням",
+		"description": "Fallback author name when none is found"
+	},
 	"__MSG_label_Developer_Stuff__": {
-		"message": "Інструменти розробника:",
+		"message": "Інструменти розробника",
 		"description": "Label for checkbox to show/hide buttons for developer testing (in Advanced settings)."
 	},
 	"__MSG_label_Fetch_Highest_Resolution_Images__": {
@@ -304,7 +320,7 @@
 		"description": "Message shown while looking for list of Chapter URLs."
 	},
 	"__MSG_Shift_Click__": {
-		"message": "Ви можете виділити декілька глав наступним чином: відмітьте першу бажану главу, затисніть клавішу Shift та відмітьте останню обрану главу.",
+		"message": "Ви можете виділити декілька глав наступним чином: відмітьте першу бажану главу, затисніть клавішу Shift та відмітьте останню обрану главу.\n\nЦе сповіщення можна вимкнути в Розширених налаштуваннях.",
 		"description": "Tell user how to shift-click to multiselect."
 	},
 	"convertToXhtmlWarning": {
@@ -467,5 +483,169 @@
 			    "content": "$1"
 			}
 		}
+	},
+	"__MSG_button_Lib_Library__": {
+		"message": "Бібліотека",
+		"description": "Label on button to toggle show 'Library'"
+	},
+	"__MSG_label_Lib_Show_Advanced_Library_Options__": {
+		"message": "Показати розширені параметри бібліотеки",
+		"description": "Label for checkbox to Show Advanced Library Options"
+	},
+	"__MSG_label_Lib_Compact_View__": {
+		"message": "Компактний вигляд бібліотеки",
+		"description": "Label for checkbox to enable compact library view"
+	},
+	"__MSG_label_Lib_Download_Epub_After_Update__": {
+		"message": "Автоматично завантажувати EPUB після додавання нових розділів",
+		"description": "Label for checkbox to Download Epubs after update"
+	},
+	"__MSG_label_Lib_Warning_In_Progress___": {
+		"message": "В процесі....",
+		"description": "Label for Library loading in local storage in progress"
+	},
+	"__MSG_button_Lib_Template_Clear_Library__": {
+		"message": "Очистити бібліотеку",
+		"description": "Label on button to clear Local Storage"
+	},
+	"__MSG_confirm_Clear_Library__": {
+		"message": "Ви впевнені, що хочете очистити всю бібліотеку? Це видалить всі збережені книги і не може бути скасовано.",
+		"description": "Confirmation dialog when clearing the entire library"
+	},
+	"__MSG_confirm_delete_library_book__": {
+		"message": "Ви впевнені, що хочете видалити цю книгу з бібліотеки? Цю дію не можна скасувати.",
+		"description": "Confirmation dialog when deleting a single library book"
+	},
+	"__MSG_button_Lib_Template_Export_Library__": {
+		"message": "Експорт бібліотеки",
+		"description": "Label on button to export Library in json format"
+	},
+	"__MSG_button_Lib_Template_Import_Library__": {
+		"message": "Імпорт бібліотеки",
+		"description": "Label on button to import Library in json format"
+	},
+	"__MSG_button_Lib_Template_Upload_Epub__": {
+		"message": "Завантажити EPUB",
+		"description": "Label on button to Upload Epub in Library"
+	},
+	"__MSG_button_Lib_Template_Add_List_To_Library__": {
+		"message": "Додати романи до бібліотеки",
+		"description": "Label on button to Add novels to Library in Library"
+	},
+	"__MSG_button_Lib_Template_Update_All__": {
+		"message": "Оновити все",
+		"description": "Label on button to Update all Epubs"
+	},
+	"__MSG_button_Lib_Template_Delete_EPUB__": {
+		"message": "Видалити книгу з бібліотеки",
+		"description": "Label on button to Delete Library Book"
+	},
+	"__MSG_button_Lib_Template_Search_new_Chapters__": {
+		"message": "Пошук нових розділів",
+		"description": "Label on button to Search new Chapters"
+	},
+	"__MSG_button_Lib_Template_Update_new_Chapters__": {
+		"message": "Оновити",
+		"description": "Label on button to Update new Chapters"
+	},
+	"__MSG_button_Lib_Template_Download_EPUB__": {
+		"message": "Завантажити EPUB",
+		"description": "Label on button to Download EPUB from Library"
+	},
+	"__MSG_button_Cache_Options__": {
+		"message": "Параметри кешу",
+		"description": "Label on button to open cache options"
+	},
+	"__MSG_label_Enable_Chapter_Caching__": {
+		"message": "Увімкнути постійне кешування розділів",
+		"description": "Label for checkbox to enable/disable persistent chapter caching"
+	},
+	"__MSG_label_Cache_Retention_Days__": {
+		"message": "Дні зберігання кешу",
+		"description": "Label for input field for cache retention period in days"
+	},
+	"__MSG_label_Cached_Chapter_Count__": {
+		"message": "Кількість кешованих розділів",
+		"description": "Label for displaying number of cached chapters"
+	},
+	"__MSG_label_Chapter_Cache_Size__": {
+		"message": "Розмір кешу розділів",
+		"description": "Label for displaying cache size"
+	},
+	"__MSG_button_Delete_All_Cached_Chapters__": {
+		"message": "Видалити всі кешовані розділи",
+		"description": "Label on button to delete all cached chapters"
+	},
+	"__MSG_tooltip_View_Cached_Chapter__": {
+		"message": "Переглянути кешований розділ",
+		"description": "Tooltip for view cached chapter button"
+	},
+	"__MSG_tooltip_Delete_Cached_Chapter__": {
+		"message": "Видалити кешований розділ",
+		"description": "Tooltip for delete cached chapter button"
+	},
+	"__MSG_tooltip_Download_Chapter__": {
+		"message": "Завантажити розділ",
+		"description": "Tooltip text for the download chapter icon"
+	},
+	"__MSG_tooltip_Chapter_Selection__": {
+		"message": "Вибрані розділи будуть включені в дії: Створити EPUB, Завантажити розділи або Додати до бібліотеки",
+		"description": "Tooltip text explaining what selected chapters are used for"
+	},
+	"__MSG_tooltip_Refresh_Chapter__": {
+		"message": "Оновити розділ",
+		"description": "Tooltip for refresh chapter menu option"
+	},
+	"__MSG_tooltip_Delete_Chapter__": {
+		"message": "Видалити розділ",
+		"description": "Tooltip for delete chapter menu option"
+	},
+	"__MSG_menu_Open_Chapter_URL__": {
+		"message": "Відкрити посилання на розділ",
+		"description": "Menu option to open the chapter URL in a new tab"
+	},
+	"__MSG_menu_Open_Story_URL__": {
+		"message": "Відкрити посилання на історію",
+		"description": "Menu option to open the main story URL in a new tab"
+	},
+	"__MSG_menu_Download_Chapter__": {
+		"message": "Завантажити HTML файл",
+		"description": "Menu option to download a single chapter as HTML file"
+	},
+	"__MSG_menu_Reorder_Chapters__": {
+		"message": "Переупорядкувати розділи",
+		"description": "Menu option to reorder chapters in a library book"
+	},
+	"__MSG_menu_Hide_Library_Chapters__": {
+		"message": "Приховати розділи з бібліотеки",
+		"description": "Menu option to hide chapters that are already in the library book"
+	},
+	"__MSG_menu_Show_Library_Chapters__": {
+		"message": "Показати розділи з бібліотеки",
+		"description": "Menu option to show chapters that are already in the library book"
+	},
+	"__MSG_menu_Export_Story_Details_JSON__": {
+		"message": "Експорт деталей історії у JSON",
+		"description": "Menu option to export story metadata and details as JSON file"
+	},
+	"__MSG_modal_title_Reorder_Chapters__": {
+		"message": "Переупорядкувати розділи",
+		"description": "Title for the chapter reordering modal"
+	},
+	"__MSG_label_Reorder_Instructions__": {
+		"message": "Використовуйте кнопки зі стрілками для зміни порядку розділів. Зміни будуть збережені у вашій бібліотеці.",
+		"description": "Instructions text in the chapter reordering modal"
+	},
+	"__MSG_button_Save_Order__": {
+		"message": "Зберегти порядок",
+		"description": "Button to save the new chapter order"
+	},
+	"__MSG_tooltip_More_Actions__": {
+		"message": "Додаткові дії",
+		"description": "Tooltip for more actions menu button"
+	},
+	"__MSG_label_library_no_books__": {
+		"message": "У вашій бібліотеці немає книг.",
+		"description": "Message shown when the library is empty"
 	}
 }
