--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -43,6 +43,18 @@
         "message": "Đóng gói EPUB",
         "description": ""
     },
+    "__MSG_button_Download_Chapters__": {
+        "message": "Tải các chương",
+        "description": "Label on button to download chapters without packing into EPUB"
+    },
+    "__MSG_button_Add_to_Library__": {
+        "message": "Thêm vào Thư viện",
+        "description": "Label on button to create the EPUB and Add it to the Library"
+    },
+    "__MSG_button_Update_Library_Book__": {
+        "message": "Cập nhật Sách Thư viện",
+        "description": "Label on button to add chapters to the currently selected library book"
+    },
     "__MSG_button_Reset__": {
         "message": "Cài đặt về ban đầu",
         "description": ""
@@ -123,8 +135,12 @@
         "message": "Tên tập tin",
         "description": ""
     },
+    "__MSG_label_Default_Author_Name__": {
+        "message": "Tên tác giả mặc định",
+        "description": ""
+    },
     "__MSG_label_Developer_Stuff__": {
-        "message": "Dành Cho Lập Trình Viên:",
+        "message": "Dành Cho Lập Trình Viên",
         "description": ""
     },
     "__MSG_label_Fetch_Highest_Resolution_Images__": {
@@ -244,7 +260,7 @@
         "description": ""
     },
     "__MSG_Shift_Click__": {
-        "message": "Bạn có thể chọn hoặc bỏ chọn một dải nhiều chương bằng việc chọn vào ô chọn cho phần chương đầu, sau đó giữ phím Shift và chọn phần chương cuối trong dải chương.",
+        "message": "Bạn có thể chọn hoặc bỏ chọn một dải nhiều chương bằng việc chọn vào ô chọn cho phần chương đầu, sau đó giữ phím Shift và chọn phần chương cuối trong dải chương.\n\nThông báo này có thể được tắt trong Tùy chọn Nâng cao.",
         "description": ""
     },
     "convertToXhtmlWarning": {
@@ -403,5 +419,169 @@
                 "content": "$1"
             }
         }
-    }
+    },
+    "__MSG_button_Lib_Library__": {
+        "message": "Thư viện",
+        "description": "Label on button to toggle show 'Library'"
+    },
+    "__MSG_label_Lib_Show_Advanced_Library_Options__": {
+        "message": "Hiển thị tùy chọn thư viện nâng cao",
+        "description": "Label for checkbox to Show Advanced Library Options"
+    },
+    "__MSG_label_Lib_Compact_View__": {
+        "message": "Chế độ xem thư viện gọn",
+        "description": "Label for checkbox to enable compact library view"
+    },
+    "__MSG_label_Lib_Download_Epub_After_Update__": {
+        "message": "Tự động tải EPUB sau khi thêm các chương mới",
+        "description": "Label for checkbox to Download Epubs after update"
+    },
+    "__MSG_label_Lib_Warning_In_Progress___": {
+        "message": "Đang xử lý....",
+        "description": "Label for Library loading in local storage in progress"
+    },
+    "__MSG_button_Lib_Template_Clear_Library__": {
+        "message": "Xóa thư viện",
+        "description": "Label on button to clear Local Storage"
+    },
+    "__MSG_confirm_Clear_Library__": {
+        "message": "Bạn có chắc chắn muốn xóa toàn bộ thư viện? Điều này sẽ xóa tất cả các sách đã lưu và không thể hoàn tác.",
+        "description": "Confirmation dialog when clearing the entire library"
+    },
+    "__MSG_confirm_delete_library_book__": {
+        "message": "Bạn có chắc chắn muốn xóa sách này khỏi thư viện? Hành động này không thể hoàn tác.",
+        "description": "Confirmation dialog when deleting a single library book"
+    },
+    "__MSG_button_Lib_Template_Export_Library__": {
+        "message": "Xuất thư viện",
+        "description": "Label on button to export Library in json format"
+    },
+    "__MSG_button_Lib_Template_Import_Library__": {
+        "message": "Nhập thư viện",
+        "description": "Label on button to import Library in json format"
+    },
+    "__MSG_button_Lib_Template_Upload_Epub__": {
+        "message": "Tải lên EPUB",
+        "description": "Label on button to Upload Epub in Library"
+    },
+    "__MSG_button_Lib_Template_Add_List_To_Library__": {
+        "message": "Thêm tiểu thuyết vào thư viện",
+        "description": "Label on button to Add novels to Library in Library"
+    },
+    "__MSG_button_Lib_Template_Update_All__": {
+        "message": "Cập nhật tất cả",
+        "description": "Label on button to Update all Epubs"
+    },
+    "__MSG_button_Lib_Template_Delete_EPUB__": {
+        "message": "Xóa sách khỏi thư viện",
+        "description": "Label on button to Delete Library Book"
+    },
+    "__MSG_button_Lib_Template_Search_new_Chapters__": {
+        "message": "Tìm chương mới",
+        "description": "Label on button to Search new Chapters"
+    },
+    "__MSG_button_Lib_Template_Update_new_Chapters__": {
+        "message": "Cập nhật",
+        "description": "Label on button to Update new Chapters"
+    },
+    "__MSG_button_Lib_Template_Download_EPUB__": {
+        "message": "Tải EPUB",
+        "description": "Label on button to Download EPUB from Library"
+    },
+    "__MSG_button_Cache_Options__": {
+        "message": "Tùy chọn bộ nhớ đệm",
+        "description": "Label on button to open cache options"
+    },
+    "__MSG_label_Enable_Chapter_Caching__": {
+        "message": "Bật bộ nhớ đệm chương vĩnh viễn",
+        "description": "Label for checkbox to enable/disable persistent chapter caching"
+    },
+    "__MSG_label_Cache_Retention_Days__": {
+        "message": "Số ngày lưu trữ bộ nhớ đệm",
+        "description": "Label for input field for cache retention period in days"
+    },
+    "__MSG_label_Cached_Chapter_Count__": {
+        "message": "Số chương được lưu đệm",
+        "description": "Label for displaying number of cached chapters"
+    },
+    "__MSG_label_Chapter_Cache_Size__": {
+        "message": "Kích thước bộ nhớ đệm chương",
+        "description": "Label for displaying cache size"
+    },
+    "__MSG_button_Delete_All_Cached_Chapters__": {
+        "message": "Xóa tất cả chương đã lưu đệm",
+        "description": "Label on button to delete all cached chapters"
+    },
+    "__MSG_tooltip_View_Cached_Chapter__": {
+        "message": "Xem chương đã lưu đệm",
+        "description": "Tooltip for view cached chapter button"
+    },
+    "__MSG_tooltip_Delete_Cached_Chapter__": {
+        "message": "Xóa chương đã lưu đệm",
+        "description": "Tooltip for delete cached chapter button"
+    },
+    "__MSG_tooltip_Download_Chapter__": {
+        "message": "Tải xuống chương",
+        "description": "Tooltip text for the download chapter icon"
+    },
+    "__MSG_tooltip_Chapter_Selection__": {
+        "message": "Các chương đã chọn sẽ được bao gồm trong các hành động: Đóng gói EPUB, Tải xuống chương hoặc Thêm vào thư viện",
+        "description": "Tooltip text explaining what selected chapters are used for"
+    },
+    "__MSG_tooltip_Refresh_Chapter__": {
+        "message": "Làm mới chương",
+        "description": "Tooltip for refresh chapter menu option"
+    },
+    "__MSG_tooltip_Delete_Chapter__": {
+        "message": "Xóa chương",
+        "description": "Tooltip for delete chapter menu option"
+    },
+    "__MSG_menu_Open_Chapter_URL__": {
+		"message": "Mở liên kết chương",
+		"description": "Menu option to open the chapter URL in a new tab"
+	},
+	"__MSG_menu_Open_Story_URL__": {
+		"message": "Mở liên kết truyện",
+		"description": "Menu option to open the main story URL in a new tab"
+	},
+    "__MSG_menu_Download_Chapter__": {
+		"message": "Tải xuống tệp HTML",
+		"description": "Menu option to download a single chapter as HTML file"
+	},
+	"__MSG_menu_Reorder_Chapters__": {
+		"message": "Sắp xếp lại chương",
+		"description": "Menu option to reorder chapters in a library book"
+	},
+	"__MSG_menu_Hide_Library_Chapters__": {
+		"message": "Ẩn chương trong thư viện",
+		"description": "Menu option to hide chapters that are already in the library book"
+	},
+	"__MSG_menu_Show_Library_Chapters__": {
+		"message": "Hiện chương trong thư viện",
+		"description": "Menu option to show chapters that are already in the library book"
+	},
+	"__MSG_menu_Export_Story_Details_JSON__": {
+		"message": "Xuất chi tiết truyện sang JSON",
+		"description": "Menu option to export story metadata and details as JSON file"
+	},
+	"__MSG_modal_title_Reorder_Chapters__": {
+		"message": "Sắp xếp lại chương",
+		"description": "Title for the chapter reordering modal"
+	},
+	"__MSG_label_Reorder_Instructions__": {
+		"message": "Sử dụng các nút mũi tên để sắp xếp lại thứ tự chương. Các thay đổi sẽ được lưu vào thư viện của bạn.",
+		"description": "Instructions text in the chapter reordering modal"
+	},
+	"__MSG_button_Save_Order__": {
+		"message": "Lưu thứ tự",
+		"description": "Button to save the new chapter order"
+	},
+	"__MSG_tooltip_More_Actions__": {
+        "message": "Thêm hành động",
+        "description": "Tooltip for more actions menu button"
+    },
+	"__MSG_label_library_no_books__": {
+		"message": "Bạn không có sách nào trong thư viện của mình.",
+		"description": "Message shown when the library is empty"
+	}
 }
