--- a/plugin/_locales/ru/messages.json
+++ b/plugin/_locales/ru/messages.json
@@ -560,6 +560,10 @@
 		"message": "Удалить главу",
 		"description": "Tooltip for delete chapter menu option"
 	},
+	"__MSG_menu_Download_Chapter__": {
+		"message": "Скачать HTML файл",
+		"description": "Menu option to download a single chapter as HTML file"
+	},
 	"__MSG_tooltip_More_Actions__": {
 		"message": "Дополнительные действия",
 		"description": "Tooltip for more actions menu button"
