--- a/plugin/_locales/uk/messages.json
+++ b/plugin/_locales/uk/messages.json
@@ -552,6 +552,10 @@
 		"message": "Видалити кешований розділ",
 		"description": "Tooltip for delete cached chapter button"
 	},
+	"__MSG_tooltip_Download_Chapter__": {
+		"message": "Завантажити розділ",
+		"description": "Tooltip text for the download chapter icon"
+	},
 	"__MSG_tooltip_Refresh_Chapter__": {
 		"message": "Оновити розділ",
 		"description": "Tooltip for refresh chapter menu option"
